--- a/style.css
+++ b/style.css
@@ -1,249 +1,343 @@
-body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.menu_bar {
-    height: 80px;
-    width: 100%;
-    background-image: url("images/background.jpg");
-    display: flex;
-    justify-content: space-around;
-}
-
-.menu_bar .mobil i {
-    display: none;
-}
-
-.logo {
-    margin-left: 30px;
-}
-
-.logo img {
-    height: 50px;
-    margin-top: 20px;
-}
-
-.menu ul li {
-    list-style-type: none;
-    display: inline-block;
-    padding: 5px;
-    margin: 5px;
-}
-
-.menu a {
-    color: white;
-    font-size: 20px;
-    text-decoration: none;
-    padding: 10px;
-    transition: 0.5s;
-}
-
-.menu li:hover a {
-    color: #073f68;
-    background-color: white;
-}
-
-.menu i {
-    color: white;
-    letter-spacing: 4px;
-}
-
-.slider {
-    background: url("images/background.jpg");
-    width: 100%;
-    height: 50vh;
-    background-position: center;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
-
-.slider button1 {
-    background-color: #33bad0;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-}
-
-.slider button2 {
-    background-color: #010a41;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-}
-
-.slider button1:hover {
-    color: #073f68;
-    background-color: white;
-    transition: 0.5s;
-}
-
-.slider button2:hover {
-    color: #073f68;
-    background-color: white;
-    transition: 0.5s;
-}
-
-.slider .orta_alan h2 {
-    color: #33bad0;
-    text-align: justify;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 150%;
-    margin-bottom: 0px;
-}
-
-.slider .orta_alan p {
-    margin-top: 0%;
-    color: white;
-    text-align: justify;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 250%;
-}
-
-.content {
-    background-color: white;
-    display: flex;
-    justify-content: space-around;
-}
-
-.icerik {
-    width: 22%;
-    border: 2px solid gray;
-    margin: 2% 0;
-    box-sizing: border-box;
-    background-color: #CCCCCC;
-}
-
-.icerik1 {
-    width: 22%;
-    border: 2px solid gray;
-    border-radius: 15px;
-    margin: 2% 0;
-    box-sizing: border-box;
-    background-color: white;
-}
-
-.content .icerik {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 10px;
-    text-align: justify;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: black;
-}
-
-.content .icerik1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 10px;
-    text-align: justify;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: black;
-}
-
-.content button3 {
-    background-color: white;
-    border: none;
-    color: black;
-    padding: 15px 32px;
-    text-align: center;
-    display: inline-block;
-    font-size: 16px;
-}
-
-.icerik p {
-    text-transform: uppercase;
-    color: white;
-    text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 20px;
-}
-
-.content img {
-    width: 50%;
-}
-
-.icerik1 button4 {
-    transition-duration: 0.4s;
-    background-color: red;
-    color: white;
-    border: 2px;
-    border-radius: 15px;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-}
-
-.icerik1 button5 {
-    color: black;
-    background-color: white;
-    border: 2px solid#f44336;
-    border-radius: 15px;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin-bottom: 5px;
-}
-
-.alt_alan {
-    width: 100%;
-    height: 40vh;
-    background-color: white;
-    color: black;
-}
-
-.alt_alan .icerik2 {
-    display: flex;
-    padding: 20px;
-    box-sizing: border-box;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-
-.alt_alan .icerik3 {
-    display: flex;
-    padding: 20px;
-    box-sizing: border-box;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-
-
-/*
-Mobil Görünümü
-*/
-
-@media only screen and (max-width:760px) {
-    .menu ul {
+    body {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .menu_bar {
+        height: 80px;
+        width: 100%;
+        background-image: url("images/background.jpg");
+        display: flex;
+        justify-content: space-around;
+    }
+    
+    .menu_bar .mobil i {
         display: none;
     }
-    .menu_bar .mobil i {
-        display: block;
-        color: white;
+    
+    .logo {
+        margin-left: 30px;
+    }
+    
+    .logo img {
+        height: 50px;
         margin-top: 20px;
     }
-    .logo img {
-        align-items: left;
-        margin-left: auto;
-        margin-right: auto;
-        width: 80%;
+    
+    .menu ul li {
+        list-style-type: none;
+        display: inline-block;
+        padding: 5px;
+        margin: 5px;
     }
-}
+    
+    .menu a {
+        color: white;
+        font-size: 20px;
+        text-decoration: none;
+        padding: 10px;
+        transition: 0.5s;
+    }
+    
+    .menu li:hover a {
+        color: #073f68;
+        background-color: white;
+    }
+    
+    .menu i {
+        color: white;
+        letter-spacing: 4px;
+    }
+    
+    .slider {
+        background: url("images/background.jpg");
+        width: 100%;
+        height: 50vh;
+        background-position: center;
+        background-size: cover;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+    
+    .slider button1 {
+        background-color: #33bad0;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+    }
+    
+    .slider button2 {
+        background-color: #010a41;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+    }
+    
+    .slider button1:hover {
+        color: #073f68;
+        background-color: white;
+        transition: 0.5s;
+    }
+    
+    .slider button2:hover {
+        color: #073f68;
+        background-color: white;
+        transition: 0.5s;
+    }
+    
+    .slider .orta_alan h2 {
+        color: #33bad0;
+        text-align: justify;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 150%;
+        margin-bottom: 0px;
+    }
+    
+    .slider .orta_alan p {
+        margin-top: 0%;
+        color: white;
+        text-align: justify;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 250%;
+    }
+    
+    .content {
+        background-color: white;
+        display: flex;
+        justify-content: space-around;
+    }
+    
+    .content_slider {
+        background: url("images/background.jpg");
+        width: auto;
+        justify-content: center;
+        display: flex;
+        height: 150px;
+        width: 100%;
+    }
+    
+    .content_slider .bolum1 {
+        background-color: rgba(1, 10, 65, 1);
+        text-transform: uppercase;
+        color: white;
+        text-align: center;
+        font-family: "Titillium Web", Arial, Helvetica, sans-serif;
+        font-size: 20px;
+        width: 20%;
+    }
+    
+    .content_slider .bolum2 {
+        display: flex;
+        background-color: rgba(51, 186, 208, 1);
+        color: white;
+        width: 40%;
+        justify-content: center;
+    }
+    
+    .content_slider .bolum2 .hr.solid {
+        border-right: 0px solid rgba(169, 234, 250, 0.1);
+        justify-content: flex-start;
+    }
+    
+    .bolum3 button {
+        background-color: white;
+        border: none;
+        color: black;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin-top: 20%;
+    }
+    
+    .content_slider .bolum3 {
+        background: url("images/bolum3.png");
+        text-transform: uppercase;
+        color: white;
+        text-align: center;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        width: 20%;
+        height: 100%;
+    }
+    
+    .icerik {
+        width: 22%;
+        border: 2px solid gray;
+        margin: 2% 0;
+        box-sizing: border-box;
+        background-color: #CCCCCC;
+    }
+    
+    .icerik1 {
+        width: 22%;
+        border: 2px solid gray;
+        border-radius: 15px;
+        margin: 2% 0;
+        box-sizing: border-box;
+        background-color: white;
+    }
+    
+    .content .icerik {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding: 10px;
+        text-align: justify;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color: black;
+    }
+    
+    .content .icerik1 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding: 10px;
+        text-align: justify;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color: black;
+    }
+    
+    .content button3 {
+        background-color: white;
+        border: none;
+        color: black;
+        padding: 15px 32px;
+        text-align: center;
+        display: inline-block;
+        font-size: 16px;
+    }
+    
+    .icerik p {
+        text-transform: uppercase;
+        color: white;
+        text-align: center;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 20px;
+    }
+    
+    .content img {
+        width: 50%;
+    }
+    
+    .icerik1 button4 {
+        transition-duration: 0.4s;
+        background-color: red;
+        color: white;
+        border: 2px;
+        border-radius: 15px;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+    }
+    
+    .icerik1 button5 {
+        color: black;
+        background-color: white;
+        border: 2px solid#f44336;
+        border-radius: 15px;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin-bottom: 5px;
+    }
+    
+    .alt_alan {
+        width: 100%;
+        height: 40vh;
+        background-color: white;
+        color: black;
+    }
+    
+    .alt_alan .icerik2 {
+        display: flex;
+        padding: 20px;
+        box-sizing: border-box;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    }
+    
+    .alt_alan .icerik3 {
+        display: flex;
+        padding: 20px;
+        box-sizing: border-box;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    }
+    /*
+Mobil Görünümü
+*/
+    
+    @media only screen and (max-width:760px) {
+        .menu ul {
+            display: none;
+        }
+        .menu_bar .mobil i {
+            display: block;
+            color: white;
+            margin-top: 20px;
+        }
+        .logo img {
+            align-items: left;
+            margin-left: auto;
+            margin-right: auto;
+            width: 80%;
+        }
+        .slider .orta_alan h2 {
+            align-items: left;
+            margin-left: auto;
+            margin-right: auto;
+            width: 90%;
+        }
+        .slider .orta_alan p {
+            align-items: left;
+            margin-left: auto;
+            margin-right: auto;
+            width: 90%;
+        }
+        .slider .orta_alan button1 {
+            width: 20%;
+        }
+        .slider .orta_alan button2 {
+            width: 20%;
+        }
+        .content_slider {
+            display: block;
+            height: 100%;
+        }
+        .content_slider .bolum1 {
+            height: 30%;
+            width: 100%;
+        }
+        .content_slider .bolum2 {
+            height: 30%;
+            width: 80%;
+        }
+        .content_slider .bolum3 {
+            height: 30%;
+            width: 100%;
+        }
+        .alt_alan .icerik2 {
+            display: block;
+            width: 80%;
+        }
+        .alt_alan .icerik3 {
+            display: block;
+            width: 80%;
+        }
+    }
