--- a/style.css
+++ b/style.css
@@ -171,6 +171,28 @@
         height: 100%;
     }
     
+    .bolum4 button {
+        background-color: white;
+        border: none;
+        color: black;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin-top: 20%;
+    }
+    
+    .content_slider .bolum4 {
+        background: url("images/bolum3.png");
+        text-transform: uppercase;
+        color: white;
+        text-align: center;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        width: 20%;
+        height: 100%;
+    }
+    
     .icerik {
         width: 22%;
         border: 2px solid gray;
@@ -318,19 +340,26 @@ Mobil Görünümü
         }
         .content_slider {
             display: block;
-            height: 100%;
+            height: 90%;
         }
         .content_slider .bolum1 {
-            height: 30%;
-            width: 100%;
+            margin-left: 30px;
+            margin-right: 5px;
+            height: 20%;
+            width: 65%;
+            justify-content: center;
+            text-align: center;
+            margin-bottom: 0%;
         }
         .content_slider .bolum2 {
-            height: 30%;
-            width: 80%;
+            margin-top: 0%;
+            height: 20%;
+            width: 65%;
+            margin-left: 30px;
+            margin-right: 5px;
         }
         .content_slider .bolum3 {
-            height: 30%;
-            width: 100%;
+            display: none;
         }
         .alt_alan .icerik2 {
             display: block;
@@ -339,5 +368,11 @@ Mobil Görünümü
         .alt_alan .icerik3 {
             display: block;
             width: 80%;
+        }
+        .content_slider .bolum4 {
+            height: 20%;
+            width: 65%;
+            margin-left: 30px;
+            margin-right: 5px;
         }
     }
