--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ body {
     width: auto;
     justify-content: center;
     display: flex;
-    height: 150px;
+    height: 200px;
     width: 100%;
 }
 
@@ -134,6 +134,7 @@ body {
     font-family: "Titillium Web", Arial, Helvetica, sans-serif;
     font-size: 20px;
     width: 20%;
+    height: 130px;
 }
 
 .content_slider .bolum2 {
@@ -142,11 +143,16 @@ body {
     color: white;
     width: 40%;
     justify-content: center;
+    height: 130px;
 }
 
 .content_slider .bolum2 .hr.solid {
     border-right: 0px solid rgba(169, 234, 250, 0.1);
     justify-content: flex-start;
+}
+
+.content_slider .bolum2 img {
+    width: 60%;
 }
 
 .bolum3 button {
@@ -168,7 +174,7 @@ body {
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     width: 20%;
-    height: 100%;
+    height: 130px;
 }
 
 .bolum4 button {
@@ -221,12 +227,17 @@ body {
     background-color: white;
 }
 
+.content {
+    width: 90%;
+    padding: 10px;
+}
+
 .content .icerik {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 10px;
+    padding: 20px;
     text-align: justify;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: black;
