content side edited

--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ body {
 }
 
 .content {
-    width: 90%;
+    width: 1200px;
     padding: 10px;
 }
 
@@ -241,6 +241,7 @@ body {
     text-align: justify;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: black;
+    width: 200px;
 }
 
 .content .icerik1 {
@@ -252,6 +253,7 @@ body {
     text-align: justify;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: black;
+    width: 200px;
 }
 
 .content .icerik0 {
@@ -263,6 +265,7 @@ body {
     text-align: justify;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: black;
+    width: 200px;
 }
 
 .content button3 {
@@ -392,6 +395,9 @@ Mobil Görünümü
         margin-right: auto;
         width: 90%;
     }
+    .slider .orta_alan {
+        width: 100%;
+    }
     .slider .orta_alan p {
         align-items: left;
         margin-left: auto;
@@ -399,10 +405,10 @@ Mobil Görünümü
         width: 90%;
     }
     .slider .orta_alan button1 {
-        width: 20%;
+        width: 28%;
     }
     .slider .orta_alan button2 {
-        width: 20%;
+        width: 29%;
     }
     .content_slider {
         display: block;
@@ -456,9 +462,9 @@ Mobil Görünümü
     }
     .content {
         display: flex;
-        width: auto;
+        width: 500px;
     }
-    .content .icerik {
+    .icerik {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -467,9 +473,8 @@ Mobil Görünümü
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         color: black;
         width: 200px;
-        padding: 10px;
     }
-    .content .icerik0 {
+    .icerik0 {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -477,9 +482,14 @@ Mobil Görünümü
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         color: black;
         width: 200px;
-        align-self: letf;
     }
-}
-
-
+    .alt_alan .icerik2 img {
+        width: 100%;
+    }
+    .alt_alan .icerik3 img {
+        width: 100%;
+    }
+    .alt_alan metin {
+        width: 100%;
+    }
 }
