--- a/style.css
+++ b/style.css
@@ -412,7 +412,8 @@ Mobil Görünümü
     }
     .content_slider {
         display: block;
-        height: 90%;
+        height: 800px;
+        background-image: none;
     }
     .content_slider .bolum1 {
         margin-left: 30px;
